# source-map

./: .babelrc  .flowconfig  .gitignore  .mocharc.json  .prettierignore  .prettierrc  CMakeLists.txt  Cargo.toml  Makefile  README.md  azure-pipelines-template.yml  azure-pipelines.yml  babelrc.cjs.json  babelrc.esm.json  bench.txt  binding.gyp  build.js  cargo.toml  debug.js  flatc  index.d.ts  index.js  index.js.flow  move-artifacts.js  package-lock.json  package.json  release.toml  source-map.ts  tag-release.js  tsconfig.json
.github/workflows/: benchmark.yml  lint.yml  release-crate.yml  release.yml  test.yml
bench/: append.js  consume.js  modify.js  old-benchmark  parcel-source-map.js  parcel-source-map.ts  run.js  serialize.js  setup.js
bench/maps/: angular.js
old-src/: Mapping.h  MappingLine.cpp  MappingLine.h  sourcemap-schema.fbs  wasm-node.js  wasm.js
old-src/flatbuffers/: flatbuffers.h
old-src/napi/: SourceMap.cpp  SourceMap.h
old-src/wasm/: SourceMap.h
parcel-tests/: add-map.test.ts  get-positions.test.ts
parcel_sourcemap/: Cargo.toml  Makefile
parcel_sourcemap/src/: lib.rs  mapping.rs  mapping_line.rs  schema.fbs  schema_generated.rs  sourcemap_error.rs  utils.rs  vlq_utils.rs
parcel_sourcemap/src/mapping_line/: mapping.rs
parcel_sourcemap_node/: Cargo.toml  build.js  index.darwin-x64.node  index.js
parcel_sourcemap_node/src/: lib.rs
parcel_sourcemap_wasm/: Cargo.toml
parcel_sourcemap_wasm/src/: lib.rs
public/bench/: data.js
src/: Base64.h  Mapping.cpp  Mapping.h  MappingContainer.cpp  MappingContainer.h  MappingLine.cpp  MappingLine.h  MappingLine.js  SourceMap.cpp  SourceMap.h  SourceMap.js  binding.cpp  binding.h  browser.js  node.js  sourcemap-schema.fbs  sourcemap-schema_generated.h  types.js  types.js.flow  utils.js  vlq.h  wasm-bindings-web.js  wasm-bindings.js  wasm-browser.js  wasm-node.js  wasm.js
src/flatbuffers/: base.h  flatbuffers.h
src/napi/: SourceMap.cpp  SourceMap.h
src/wasm/: SourceMap.cpp  SourceMap.h
test/: append.test.js  basic.test.js  empty-map.test.js  extend-map.test.ts  extend.test.js  find.test.js  formats.test.js  get-position.test.js  index.js  inline-source.test.js  merging.test.js  offset-utils.test.js  utils.test.js  vlq.test.js
test/integration/: a.js
test/integration/sub-folder/: b.js
