[package]
authors = ["Jasper De Moor <jasperdemoor@gmail.com>"]
description = "Parcel Source Map Library"
edition = "2021"
keywords = ["sourcemap", "Node", "Parcel"]
license = "MIT"
name = "parcel_sourcemap"
repository = "https://github.com/parcel-bundler/source-map"
version = "2.0.0"

[features]
native = ["napi"]
skip_napi = ["napi-derive/noop"]
wasm = ["js-sys", "wasm-bindgen", "napi-derive/noop"]

[dependencies]
rkyv = "0.6.7"
vlq = "0.5.1"

[dependencies.napi]
default-features = false
optional = true
version = "2"

[dependencies.napi-derive]
default-features = false
version = "2"

[dependencies.js-sys]
optional = true
version = "0.3"

[dependencies.wasm-bindgen]
optional = true
version = "0.2"
