[package]
name = "parcel_sourcemap"
version = "2.0.4"
authors = [ "Jasper De Moor <jasperdemoor@gmail.com>" ]
edition = "2018"
description = "Parcel Source Map Library"
license = "MIT"
keywords = [ "sourcemap", "Node", "Parcel" ]
repository = "https://github.com/parcel-bundler/source-map"

[dependencies]
"vlq" = "0.5.1"
rkyv = "0.7.38"
